--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-jshint": "^1.9.2",
     "gulp-concat": "^2.5.2",
     "gulp-sass": "^1.3.3",
+    "gulp-stylus": "^2.0.1",
     "gulp-rsync": "0.0.5",
     "gulp-clean": "^0.3.1"
   }
